--- a/about.html
+++ b/about.html
@@ -41,19 +41,23 @@
 
 	
 	<section class="about-mainPage">
-        <div class="about-textbox">
+        
 			<h1 class="about-mainPage-heading">About</h1>
-						
-            <p>Journey in Photos… Just a typical photo hobbyist… started when my brother lend me his camera, started to know my way around it. Though the images were not as sharp, the curiosity then started.</p>
-			<p>&nbsp;</p>
-			<p>Though what I finished in school is extremes of what I love the most, I was still able to adapt on the field of photography.
-            Along the years, through self study and practice, I was able to capture images that appealed not only to me what but to the others. The curiosity then became a hobby and eventually now… a passion.
-            Whatever that appeals me, I shoot. Capturing the emotions, the finesse, the scenery, and the beauty of it all.</p>
-			<p>&nbsp;</p>
-			<p>My friend & mentor through his initiative gave me some important tips and the thing that stuck into my mind was; “ Your photo must tell a story…”</p>
-			<p>&nbsp;</p>
-			<p>Browse the page for my various images…. Happy viewing.</p>
-        </div>   
+
+			<div class="about-textbox">				
+				<p>Journey in Photos… Just a typical photo hobbyist… started when my brother lend me his camera, started to know my way around it. Though the images were not as sharp, the curiosity then started.</p>
+				<p>&nbsp;</p>
+				<p>Though what I finished in school is extremes of what I love the most, I was still able to adapt on the field of photography.
+				Along the years, through self study and practice, I was able to capture images that appealed not only to me what but to the others. The curiosity then became a hobby and eventually now… a passion.
+				Whatever that appeals me, I shoot. Capturing the emotions, the finesse, the scenery, and the beauty of it all.</p>
+				<p>&nbsp;</p>
+				<p>My friend & mentor through his initiative gave me some important tips and the thing that stuck into my mind was; “ Your photo must tell a story…”</p>
+				<p>&nbsp;</p>
+				<p>Browse the page for my various images…. Happy viewing.</p>
+				<img src="img/12801277_1288488581167854_5804898101387695281_n.jpg" alt="">
+				<p><em>John Michael Tan</em></p>
+				<img src="img/26648164_2037040396312665_321261233_n.png" alt="" class="logo">
+        	</div>   
     </section>
 
 
