--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,10 @@
 								</div>
 								<div class="contact__main-left-social">
 									<ul>
-										<li><a href=""><img src="img/icons8_Facebook_50px_1.png" alt=""></a></li>
-										<li><a href=""><img src="img/icons8_Twitter_50px_1.png" alt=""></a></li>
-										<li><a href=""><img src="img/icons8_Instagram_Old_50px_1.png" alt=""></a></li>
-										<li><a href=""><img src="img/icons8_LinkedIn_50px.png" alt=""></a></li>
+										<li><a href=""><img src="img/icons8_Facebook_50px.png" alt=""></a></li>
+										<li><a href=""><img src="img/icons8_Twitter_50px.png" alt=""></a></li>
+										<li><a href=""><img src="img/icons8_Instagram_Old_50px.png" alt=""></a></li>
+										<li><a href=""><img src="img/icons8_LinkedIn_2_50px.png" alt=""></a></li>
 									</ul>
 								</div>
 							</div>
